--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     display: inline-block;
     padding-top: 20px;
     text-align: left;
-    max-width: 1000px;
+    width: 1000px;
 } 
 
 h1 {
@@ -40,7 +40,7 @@ a.text {
     margin-left: 10px;
 }
 
-a.card {
+a.cardlink {
     background: #fff;
     float: left;
     margin: 10px;
@@ -61,6 +61,10 @@ a.card {
     text-decoration: none;
 }
 
-a.card:hover {
+a.cardlink:hover {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+svg {
+    
 }
