--- a/newtab/css/links-dark.css
+++ b/newtab/css/links-dark.css
@@ -3,6 +3,7 @@
     --bg: #001520;
     --card: #00253b;
     --highlight: #005D94;
+    --clicked: #174561;
 }
 
 ::-webkit-scrollbar { 
@@ -151,7 +152,7 @@ a.card:hover {
 }
 
 a.card:active {
-    background: #1A237E;
+    background: var(--clicked);
 }
 
 @media only screen and (max-width: 820px) {
