--- a/newtab/css/links-dark.css
+++ b/newtab/css/links-dark.css
@@ -79,6 +79,7 @@ a.fav-clicker {
     border-radius: 3px;
     padding-bottom: 15px;
     margin: 10px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
     transition: 0.3s;
 }
 
