--- a/newtab/css/links-dark.css
+++ b/newtab/css/links-dark.css
@@ -120,7 +120,6 @@ svg {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     display: inline-block;
     transition: 0.1s;
-    vertical-align: middle;
     
     color: var(--primary);
     font-family: Roboto;
@@ -161,6 +160,10 @@ svg {
     
     h2 {
         width: calc(100% - 22px);
+    }
+    
+    .card {
+        float: none;
     }
     
     .fav-box {
