--- a/css/index.css
+++ b/css/index.css
@@ -48,6 +48,7 @@ h1 {
     padding-right: 50px;
     margin-top: 10px;
     margin-bottom: 10px;
+    cursor: default;
 }
 
 div.container {
@@ -81,7 +82,6 @@ a.cardlink {
     padding-left: 25px;
     padding-right: 25px;
     border-radius: 3px;
-    cursor: default;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     display: inline-block;
     transition: 0.1s;
@@ -100,6 +100,20 @@ a.cardlink:hover {
 
 a.cardlink:active {
     background: var(--clicked);
+}
+
+a.footer {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: block;
+    width: 100%;
+    background: var(--highlight);
+    
+    color: var(--card);
+    font-family: Roboto;
+    font-weight: 400;
+    text-align: center;
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 768px) {
