--- a/newtab/css/links.css
+++ b/newtab/css/links.css
@@ -45,6 +45,8 @@ h1 {
     margin-left: 50px;
     margin-bottom: 20px;
     margin-right: 50px;
+    cursor: default;
+    transition: margin 0.3s;
 
 }
 .container {
@@ -52,6 +54,7 @@ h1 {
     margin-right: 40px;
     margin-bottom: 30px;
     overflow: auto;
+    transition: margin 0.3s;
 }
 
 /* CONTAINER TITLE */
@@ -61,10 +64,11 @@ h2 {
     font-family: Roboto;
     font-weight: 400;
     margin-left: 10px;
+    cursor: default;
 }
 
 a.fav-clicker {
-    cursor: default;
+/*    cursor: default;*/
 }
 
 .fav-box {
@@ -75,6 +79,7 @@ a.fav-clicker {
     border-radius: 3px;
     padding-bottom: 15px;
     margin: 10px;
+    cursor: pointer;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
@@ -102,7 +107,7 @@ svg {
     font-family: Roboto;
     text-align: center;
     text-decoration: none;
-    cursor: default;
+    cursor: pointer;
     transition: 0.1s;
 } .fav-box:hover > .fav-text{
     color: #fff;
@@ -117,14 +122,12 @@ svg {
     padding-left: 25px;
     padding-right: 25px;
     border-radius: 3px;
-    cursor: default;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     display: inline-block;
     transition: 0.1s;
     
     color: var(--primary);
     font-family: Roboto;
-    text-align: center;
     text-decoration: none;
 }
 
@@ -141,23 +144,21 @@ svg {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 514px) {
+    
     h1 {
         margin-left: 20px;
         margin-right: 20px;
+    }
+    
+    h2 {
+        width: calc(100% - 22px);
     }
     
     .container {
         margin-left: 10px;
         margin-right: 10px;
         padding-bottom: 20px;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    
-    h2 {
-        width: calc(100% - 22px);
     }
     
     .fav-box {
