--- a/newtab/css/links.css
+++ b/newtab/css/links.css
@@ -41,9 +41,7 @@ h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     font-size: 56px;
-    margin: 0px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 10px 50px;
     cursor: default;
     transition: margin 0.3s;
 
@@ -117,10 +115,7 @@ svg {
     background: var(--card);
     float: left;
     margin: 10px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 15px 25px;
     border-radius: 3px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     display: inline-block;
